--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl:
-url: "Wonchul-Shin/Type-on-Strap"
+url: "wonchul-shin.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
 title: Wonchul's Project                                   # site's title
